--- a/templates/garden/home.html
+++ b/templates/garden/home.html
@@ -11,16 +11,17 @@
     <div class="layout__frontdrop"></div>
     <div class="layout__wrapper">
       <header class="layout__header">
+          
         <nav>
           <ul class="nav nav--header nav--header-1">
             <li class="nav__item nav__item--home">
               <a class="nav__link" href="#0">Home</a>
             </li>
             <li class="nav__item nav__item--about">
-              <a class="nav__link" href="about">About</a>
+              <a class="nav__link" href="#0">About</a>
             </li>
             <li class="nav__item nav__item--clients">
-              <a class="nav__link" href="#0">My Garden</a>
+              <a class="nav__link" href="#0">Gardens</a>
               <ul class="nav nav--header nav--header-2">
                 <li class="nav__item">
                   <a class="nav__link" href="#0">All Plants</a>
@@ -29,12 +30,12 @@
                   <a class="nav__link" href="#0">My Schedule</a>
                 </li>
                 <li class="nav__item">
-                  <a class="nav__link"  href="#0">Social</a>
+                  <a class="nav__link"  href="#0">My Garden</a>
                 </li>
               </ul>
             </li>
             <li class="nav__item nav__item--services">
-              <a class="nav__link" href="#0">Profile</a>
+              <a class="nav__link" href="#0">Social</a>
               <ul class="nav nav--header nav--header-2">
                 <li class="nav__item">
                   <a class="nav__link" href="#0">Friends</a>
@@ -57,10 +58,15 @@
         <section class='hero'>
           <div class="hero-block hero-block--header">
             <h1 class="hero-title">
-              All Seasons <em>A platform for gardeners of all skill levels.</em>
+              GardenSocial <em>A platform for gardeners of all skill levels.</em>
               
             </h1>
-            <p class="hero-text">The idea was to create <a href="https://codepen.io/pen?template=PMbwKb" target="_blank">a learning platform for new gardeners </a>and a place to find info and tips for gardening while creating a social experience for all gardeners to collaborate.</p>
+            <p class="hero-text">Join in on what is potentially the best platform 
+                for gardeners of all skill levels. GardenSocial takes a new approach on 
+                gardening by merging a learning platform with a social media platform. 
+                So "dig" in and <a href="signup" target="signup">sign up</a> 
+                to start your gardening experience!
+            </p>
           </div>
         </section>
       </main>
