--- a/templates/base.html
+++ b/templates/base.html
@@ -13,7 +13,11 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'css/garden.css' %}">
-    <link rel="stylesheet" href="{% static 'garden.js' %}">
+    <link rel="stylesheet" href="{% static 'css/signup.css' %}">
+    <!-- <script src="{% static 'js/garden.js' %}" defer></script> -->
+    <script src="{% static 'js/signup.js' %}" defer></script>
+    <script src="{% static 'js/social.js' %}" defer></script>
+    
 </head>
 <body>
     {% block content %}
