--- a/templates/garden/social.html
+++ b/templates/garden/social.html
@@ -1,5 +1,4 @@
 {% extends 'base.html' %}
-{% load static %}
 
 {% block content %}
 
@@ -12,11 +11,15 @@
     <title>Document</title>
 </head>
 <header>
-   Home
+    Social
 </header>
 <body>
-    
-    
+    <div id="searchbtn">
+        <button id="search-button">Search</button>
+
+    </div>
+	<div id="search-data"></div>
+    <h1><a href="/">Home</a></h1>
 </body>
 </html>
 
