--- a/templates/garden/gardens.html
+++ b/templates/garden/gardens.html
@@ -2,20 +2,18 @@
 {% load static %}
 
 {% block content %}
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Gardens</title>
 </head>
 <header>
-   Home
+    Gardens
 </header>
 <body>
-    
     
 </body>
 </html>
