--- a/templates/garden/home.html
+++ b/templates/garden/home.html
@@ -18,7 +18,7 @@
               <a class="nav__link" href="#0">Home</a>
             </li>
             <li class="nav__item nav__item--about">
-              <a class="nav__link" href="#0">About</a>
+              <a class="nav__link" href="{% url 'about' %}">About</a>
             </li>
             <li class="nav__item nav__item--clients">
               <a class="nav__link" href="#0">Gardens</a>
@@ -35,7 +35,7 @@
               </ul>
             </li>
             <li class="nav__item nav__item--services">
-              <a class="nav__link" href="#0">Social</a>
+              <a class="nav__link" href="{% url 'social' %}">Social</a>
               <ul class="nav nav--header nav--header-2">
                 <li class="nav__item">
                   <a class="nav__link" href="#0">Friends</a>
