--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,21 +1,34 @@
 {% extends 'base.html' %}
 
 {% block content %}
-  <h2>Sign up</h2>
-  <form method="post">
-    {% csrf_token %}
-    {% for field in form %}
-      <p>
-        {{ field.label_tag }}<br>
-        {{ field }}
-        {% if field.help_text %}
-          <small style="color: rgb(255, 255, 255)">{{ field.help_text }}</small>
-        {% endif %}
-        {% for error in field.errors %}
-          <p style="color: red">{{ error }}</p>
-        {% endfor %}
-      </p>
-    {% endfor %}
-    <button type="submit">Sign up</button>
+
+
+<canvas></canvas>
+<h2>Signup</h2>
+
+<div class="form-wrapper">
+  <form onsubmit="return false;">
+    <label for="name">Full Name</label>
+    <input type="text" id="name">
+    
+    <label for="email">Choose a Username</label>
+    <input type="text" id="username">
+    
+    <label for="email">State</label>
+    <input type="text" id="state">
+    
+    <label for="email">Experience Level</label>
+    <input type="text" id="experience">
+    
+    <label for="email">Email</label>
+    <input type="text" id="email">
+    
+    <label for="password">Password</label>
+    <input type="password" id="password">
+    
+    
+    <button>Sign up</button>
   </form>
+</div>
+
 {% endblock %}
